Document events with JSDoc.

--- a/lib/readme.hbs
+++ b/lib/readme.hbs
@@ -12,7 +12,14 @@ npm install mio-mongo
 
 ## API Reference
 
-{{#module name="mio-mongo"}}{{>exported}}{{/module}}## Contributing
+{{>main}}
+
+### Events
+
+{{#each (events)~}}
+  {{>event}}
+{{/each}}
+## Contributing
 
 Please submit all issues and pull requests to the [mio/mongo](http://github.com/mio/mongo) repository!
 
