--- a/lib/README_template.md.hbs
+++ b/lib/README_template.md.hbs
@@ -108,60 +108,13 @@ resource's collection via `Resource.options.mongo.dbCollection`.
 
 ## API Reference
 
-<a name="module_mio-mongo"></a>
-#mio-mongo
-<a name="exp_module_mio-mongo"></a>
-##module.exports(settings) ⏏
-It is recommended to share the same `settings.db` object between
-different resources so they can share the same mongo client and connection
-pool.
-
-A connection to mongo will be established automatically before any query is
-run.
-
-If you'd like to use the mongo client directly, the `db` is available via
-`Resource.options.mongo.db`.
-
-**Params**
-
-- settings `Object`  
-  - collection `String` - mongodb collection for this resource  
-  - \[connectionString\] `String` - mongodb connection string. required
-if `settings.db` is not provided.  
-  - \[connectionOptions\] `Object` - mongodb connection options  
-  - \[db\] `mongodb.MongoClient.Db` - reuse node-mongo-native db
-connection  
-
-**Returns**: `function` - returns Mio plugin  
-
+{{>main}}
 
 ### Events
 
-<a name="module_mio-mongo..mongodb_query"></a>
-#event: "mongodb:query"
-Emitted with `query` argument whenever a `query` is received and before it
-is processed, to allow for transformation.
-
-**Params**
-
-- query `Object`  
-
-**Scope**: inner event of [mio-mongo](#module_mio-mongo)  
-
-<a name="module_mio-mongo..mongodb_collection"></a>
-#event: "mongodb:collection"
-Emitted whenever a collection of resources is returned. Collections returned
-by `mio-mongo` include `size` and `from` pagination properties.
-
-**Params**
-
-- collection <code>[external:mio.Resource.Collection](external:mio.Resource.Collection)</code>  
-  - from `Number`  
-  - size `Number`  
-
-**Scope**: inner event of [mio-mongo](#module_mio-mongo)  
-
-
+{{#each (events)~}}
+  {{>event}}
+{{/each}}
 ## Contributing
 
 Please submit all issues and pull requests to the [mio/mongo](http://github.com/mio/mongo) repository!
